[package]
name = "chessground"
version = "0.9.0" # remember to update html_root_url
description = "A chessboard widget for Relm/GTK"
repository = "https://github.com/niklasf/rust-chessground"
readme = "README.md"
license = "GPL-3.0+"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
categories = ["games", "gui"]
keywords = ["chess"]

[dependencies]
gtk = "0.7.0"
gdk = "0.11.0"
cairo-rs = "0.7.0"
librsvg = { git = "https://gitlab.gnome.org/GNOME/librsvg", rev = "6e6b2e9c55271150ad622f5945d531f8a5d3cdc3" }
time = "0.1"
relm = "0.17"
relm-derive = "0.17"
shakmaty = "0.14"

[dev-dependencies]
rand = "0.6"
