[package]
name = "chessground"
version = "0.9.0" # remember to update html_root_url
description = "A chessboard widget for Relm/GTK"
repository = "https://github.com/niklasf/rust-chessground"
readme = "README.md"
license = "GPL-3.0+"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
categories = ["games", "gui"]
keywords = ["chess"]

[dependencies]
gtk = "0.14"
gdk = "0.14"
cairo-rs = "0.14"
rsvg = { git = "https://github.com/selaux/rsvg-rs.git", rev = "27f4c8adbadddbffc413d27f8866afa023fe2fd5" }
time = "0.1"
relm = "0.22"
relm-derive = "0.22"
shakmaty = "0.14"

[dev-dependencies]
rand = "0.6"
