[package]
name = "chessground"
version = "0.9.0" # remember to update html_root_url
description = "A chessboard widget for Relm/GTK"
repository = "https://github.com/niklasf/rust-chessground"
readme = "README.md"
license = "GPL-3.0+"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
categories = ["games", "gui"]
keywords = ["chess"]

[dependencies]
gtk = "0.15"
gdk = "0.15"
cairo-rs = "0.15"
rsvg = { git = "https://github.com/selaux/rsvg-rs.git", rev = "eacde1ea951b57915a7309b9b4ff75c17e2f0642" }
time = "0.1"
relm = "0.23"
relm-derive = "0.23"
shakmaty = "0.21"

[dev-dependencies]
rand = "0.6"
